<resources>
    <string name="app_name">Retrofit Demo</string>
    <string name="no_user_found">No User Found!!</string>
    <string name="get_all_users">Get All Users</string>
    <string name="get_single_user">Get Single User</string>
    <string name="create_user">Create User</string>
    <string name="update_user_by_id">Update User by ID</string>
    <string name="delete_user_by_id">Delete User By ID</string>
    <string name="enter_the_users_id">Enter the Users ID</string>
    <string name="enter_details">Enter Details</string>

    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="job">Job</string>
    <string name="enter_job_or_your_occupation">Enter Job or your occupation</string>
    <string name="cancel">Cancel</string>
    <string name="_1_10">(1–10)</string>
    <string name="find">Find</string>
    <string name="get">Get</string>
    <string name="id">ID</string>
    <string name="updated_at">Updated at</string>
    <string name="unknown">Unknown</string>
    <string name="update">Update</string>
</resources>