<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="487dp"
        android:padding="12dp"
        android:text="@string/enter_the_users_id"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDialogUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints="none"
        android:hint="@string/_1_10"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/btnCreateUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle" />

    <TextView
        android:id="@+id/btnCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/background_dialog_button"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/find"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/etDialogUserId"
        app:layout_constraintTop_toBottomOf="@+id/etDialogUserId" />

</androidx.constraintlayout.widget.ConstraintLayout>